# media-puller

./: .gitignore  README.md  pyproject.toml
media_puller/: __init__.py  __main__.py  cli.py  config.py  core.py
media_puller/output/: __init__.py  openmusic.py
