[project]
name = "media-puller"
version = "0.1.0"
description = "🎵 Download media from YouTube, Bilibili, Douyin and 1000+ platforms — feeds into open_music"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "yt-dlp>=2024",
]

[project.scripts]
media-puller = "media_puller.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["media_puller*"]
